--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "array-move": "^4.0.0",
     "axios": "^0.21.1",
     "compressorjs": "^1.0.7",
     "js-cookie": "^2.2.1",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "react-star-rating-component": "^1.4.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
