--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/material": "^5.11.8",
+    "@mui/styles": "^5.11.7",
     "@mui/x-date-pickers": "^5.0.18",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -14,6 +17,7 @@
     "array-move": "^4.0.0",
     "axios": "^0.21.1",
     "compressorjs": "^1.0.7",
+    "dayjs": "^1.11.7",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.4",
     "react": "^17.0.2",
