--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.11.8",
     "@mui/styles": "^5.11.7",
     "@mui/x-date-pickers": "^5.0.18",
